# Lynx

./: .gitignore  .readthedocs.yaml  AF_Correction.ipynb  AF_utils.py  IO.py  README.md  __init__.py  autof.csv  constants.py  dataloader.py  environment.yml  pyproject.toml  registration.py  requirements.txt  train.py  utils.py  zonation.py
.github/workflows/: ci.yml
ablation/: liver_ablation.py  thymus_ablation.py
attn/: battn.ipynb  configs.py  dataset.py  model.py  scKI.py
attn/synthetic/: config.py  semisyn_workflow_3ct_2way_data_gen.py  simulate.py  simulate_spatial_data_3ct.py  simulation.ipynb
benchmarks/: run_benchmarks.sh
benchmarks/ablation/: liver_ablation.py  thymus_ablation.py
benchmarks/breast/: run_GASTON.py  run_Novae.py
benchmarks/liver/: run_Coral.py  run_GASTON.py  run_Novae.py  run_SIMVI.py  run_SpaceFlow.py  run_SpatialGlue.py  run_SpatialMETA.py  (+1 more)
breast/: annotation.py  downstream.py  run_GASTON.py  run_Lynx.py  run_Novae.py
docs/: .gitignore  Makefile  RELEASE_AUTOMATION_PLAN.md  _build_notebooks.py  conf.py  index.rst  installation.rst  overview.rst  requirements-docs.txt
liver/: alignment.py  annotation.py  cellpose_proseg_pipeline.nf  downstream.py  downstream_multisample.py  nextflow.config  proseg_pipeline.nf  reseg.py  run_Coral.py  run_GASTON.py  run_Lynx.py  run_Lynx_multi.py  run_Lynx_multisample.py  run_SIMVI.py  run_SpaceFlow.py  run_reseg_pipeline.sh  run_spaTrack.py  simulate_gradient.py  xenium_proseg_pipeline.nf
lynx/: __init__.py  config.py  dataset.py  io.py  model.py  plot.py  test_assoc.py  trajectory.py  utils.py
models/: base_model.py  baseline.py  bvae.py  bvae_2d.py  configs.py  data.py  dataset.py  gpca.py  logit_vgae.py  model_eval.py  model_train.py  module.py  sb_vgae.py  vgae.py  vgae_sbm.py
notebooks/: AF_Correction.ipynb  Ablation_studies.ipynb  Benchmark.ipynb  Cell_Annotation.ipynb  CyCIF_EDA.ipynb  Downstream.ipynb  Downstream_Analysis.ipynb  EDA.ipynb  Graph_Conversion.ipynb  Graph_Diff_sim.ipynb  Hyperparam_sweep.ipynb  Integration.ipynb  Interpolation.ipynb  Robustness_analysis.ipynb  Run_Lynx.ipynb  Run_VGAE.ipynb  Run_models.ipynb  Segmentation_Demo.ipynb  VALIS_align.ipynb  graph_diff_sim.ipynb
simulation/: generate_data.py  run_Lynx.py  run_SpatialPCA.Rmd
tests/: conftest.py  test_dataset.py  test_deps_consistency.py  test_imports.py  test_io.py
thymus/: Benchmark.ipynb  annotation.py  downstream.py  run_Lynx.py  run_Novae.py  run_others.py  run_scVIs.py
util/: IO.py  __init__.py  constants.py  gen_graph.py  metrics.py  plot.py  registration.py  test_assoc.py  trajectory.py  utils.py  zonation.py
(+22 files in other folders)
