[tool.poetry]
name = "LYNX"
version = "0.1.0"
description = "Spatial trajectory inference with multi-omic integration"
authors = []
readme = "README.md"
packages = [{ include = "lynx" }]

[tool.poetry.dependencies]
python = "3.9.5"
jenkspy = "0.4.1"
scFates = "1.0.8"
matplotlib = "3.9.4"
ml-collections = "0.1.1"
networkx = "3.2.1"
numpy = ">=1.23.5"
opencv-contrib-python = "4.9.0.80"
opencv-contrib-python-headless = "4.6.0.66"
opencv-python-headless = "4.9.0.80"
pandas = ">=2.0.3"
py-pcha = "0.1.3"
pyro-ppl = "1.9.1"
scanpy = ">=1.10.1"
scikit-learn = "1.3.2"
scikit-image = "0.22.0"
scipy = ">=1.9.0"
seaborn = "0.13.0"
squidpy = "1.5.0"
statsmodels = "0.14.1"
tifffile = "2023.9.26"
torch = "2.3.1"
torch-geometric = "2.6.1"
torch-sparse = "0.6.18"
torchrl = "0.4.0"
torchvision = "0.18.1"
tqdm = "4.66.1"
wandb = "0.19.8"

[tool.poetry.group.dev.dependencies]
notebook = "*"
jupyterlab = "*"
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
